2004-05-13  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm (_string_has_count): new method
	(_a_is_next_link): new method

	* lib/WWW/Search/Yahoo/DE.pm (_a_is_next_link): new method
	(_string_has_count): new method

	* lib/WWW/Search/Yahoo/China.pm (_a_is_next_link): new method
	(_string_has_count): new method

2004-03-28  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): overhaul for new webpage format

2004-03-13  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): unescape URLs

2004-02-17  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): updates to support cn.yahoo.com

	* t/china.t: new file

	* lib/WWW/Search/Yahoo/China.pm: new file

	* lib/WWW/Search/Yahoo/Korea.pm: tiny pod fix; make VERSION 3 digits

2004-01-23  Kingpin  <mthurn@verizon.net>

	* t/*.t: call env_proxy() on all WWW::Search objects

2004-01-18  Kingpin  <mthurn@verizon.net>

	* t/echostar-advanced.t: make most tests TODO because yahoo.com is broken

2003-12-29  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (parse_tree): fix date parsing for year-end wraparound!

2003-11-01  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): follow next page of results

2003-09-20  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm: use strict

2003-08-31  Kingpin  <mthurn@verizon.net>

	* t/echostar-advanced.t: new file

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (native_setup_search): set _allow_empty_query if doing Advanced search;
	(parse_tree): parse result count in Advanced search results;
	added pod for how to do Advanced search

2003-08-27  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): fixed for moreover.com links

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (ignore_channels): new method

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): fix parser for new page layout
